# IQ-TREE

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  alignment.cpp  alignment.h  cladeAnalysis.cpp  cladeAnalysis.h  cmake_install.cmake  estimator.cpp  estimator.h  includelog  intrinsics  iqtree.cpp  log  pda.cpp  phyloanalysis.cpp  phylokernelsitemodel.cpp  phylotree.cpp  phylotree.h  phylotreesse.cpp  sqrtlog  tools.cpp  tools.h  upperbounds.cpp
alignment/: Makefile  alignment.cpp  cmake_install.cmake  superalignment.h
example/: example.phy.bionj  example.phy.iqtree  example.phy.mldist  example.phy.treefile
gsl/: Makefile  cmake_install.cmake
lbfgsb/: Makefile  cmake_install.cmake
lib/: .!2827!libomp.ar  .!9642!pthreadVC2.lib
lib32/: .!6116!pthreadVC2.lib
main/: main.cpp  phyloanalysis.cpp  phylotesting.cpp  terraceanalysis.cpp  terraceanalysis.hpp
model/: Makefile  cmake_install.cmake  modelfactory.cpp  modelliemarkov.cpp  modelmarkov.cpp  modelmarkov.h  modelmixture.cpp  modelpomo.cpp  modelpomo.h  modelprotein.cpp  modelsubst.cpp  modelsubst.h  modelunrest.cpp  modelunrest.h
ncl/: Makefile  cmake_install.cmake
nclextra/: Makefile  cmake_install.cmake
terrace_mcmc/: CMakeLists.txt  generateAllTreesFromTerrace.cpp  generateAllTreesFromTerrace.hpp  mhrw.cpp  mhrw.h  node.cpp  node.h  parser.cpp  parser.h  phyloTerraceSampling.cpp  phyloTerraceSampling.h  srw.cpp  srw.h  supermatrix.cpp  supermatrix.h  terrace.cpp  terrace.h  terrace_iq.cpp  terrace_iq.hpp  terracecheck.cpp  terracecheck.hpp  utils.cpp  utils.h
(+79 files in other folders)
