add_library(terrace_mcmc
    phyloTerraceSampling.h
    phyloTerraceSampling.cpp
    generateAllTreesFromTerrace.cpp
    generateAllTreesFromTerrace.hpp
    terracecheck.hpp
    terracecheck.cpp
    terrace_iq.hpp
    terrace_iq.cpp
    node.h
    node.cpp
    mhrw.cpp
    mhrw.h
    srw.h
    srw.cpp
    parser.h
    parser.cpp
    supermatrix.h
    supermatrix.cpp
    terrace.h
    terrace.cpp
    utils.h
    utils.cpp    
)
